# telegram-wipe

./: .gitignore  build.sh  readme.md
client/: CMakeLists.txt  Dockerfile  build.sh  client.cpp  helpers.h  logger.h  run.sh
